// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should be rendered correctly 1`] = `
<div
  className="root uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography line-height-18 font-size-14 v-padding-9 container"
>
  Test
</div>
`;

exports[`Text should be rendered correctly 2`] = `
<div
  className="root uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography line-height-30 font-size-24 v-padding-9 container"
  onClick={[Function]}
>
  Test
</div>
`;
